# twister

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-tests.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: comparison.yaml  comparison_dispatch.yaml  comparison_v1.yaml  comparison_v2.yaml  main.yaml
docs/: conf.py  how_to.rst  index.rst
samples/shell/: README.rst  shell_test.py  testspec.yaml
src/twister2/: constants.py  exceptions.py  generate_tests_plugin.py  helper.py  load_tests.py  log.py  platform_specification.py  plugin.py  quarantine.py  quarantine_plugin.py  specification_processor.py  twister_config.py  yaml_file.py  yaml_test_function.py  yaml_test_specification.py
src/twister2/builder/: build_filter_processor.py  build_helper.py  build_manager.py  builder_abstract.py  cmake_builder.py  factory.py  kconfig_dts_filter.py  west.py  west_builder.py
src/twister2/cmake_filter/: cmake_filter.py  cmakecache.py  expr_parser.py
tests/: conftest.py  platfrom_specification_test.py  specification_processor_test.py  twister2_plugin_platform_selection_test.py  twister2_plugin_quarantine_test.py  twister2_plugin_test.py  yaml_file_test.py  yaml_test_specification_test.py
tests/builder/: build_helper_test.py  build_manager_test.py  cmake_builder_test.py  conftest.py  factory_test.py  west_builder_test.py  west_test.py
tests/data/: pytest.ini  testcase.yaml
tests/device/: hardware_adapter_test.py  native_simulator_adapter_test.py  qemu_adapter_test.py  simulator_adapter_test.py
tests/filter/: filter_plugin_test.py  tag_filter_test.py
tests/fixtures/: common_test.py
tests/load_tests/: load_testplan_test.py
tests/log_file/: build_log_file_test.py  log_file_test.py
tests/log_parser/: console_log_parser_test.py  log_parser_test.py  ztest_log_parser_test.py
tests/quarantine/: quarantine_unit_test.py
tests/report/: report_plugin_test.py
tests/scripts/: hardware_map_test.py
twister2/: exceptions.py  helper.py  log.py  platform_specification.py  plugin.py  twister_config.py  yaml_file.py  yaml_test_function.py  yaml_test_specification.py
twister2/builder/: builder_abstract.py  factory.py  west.py
twister2/device/: device_abstract.py  factory.py  hardware_adapter.py  hardware_map.py  native_simulator_adapter.py  simulator_adapter.py
twister2/filter/: filter_interface.py  filter_plugin.py  slow_test_filter.py  tag_filter.py
twister2/fixtures/: builder.py  dut.py  log_parser.py
twister2/log_parser/: __init__.py  factory.py  harness_log_parser.py  log_parser_abstract.py
twister2/report/: base_report_writer.py  helper.py  test_plan_csv.py  test_plan_json.py  test_plan_plugin.py  test_results_json.py  test_results_plugin.py
twister2/scripts/: hardware_map.py  main.py
(+55 files in other folders)
