[metadata]
name = pytest-twister
description = Plugin for pytest to run Zephyr tests
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
python_requires = ~=3.8
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Quality Assurance
    Operating System :: Posix :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
install_requires =
    pytest>=7.0.0
    pytest-subtests>=0.7.0
    PyYAML>=5.1
    pyserial

[options.packages.find]
include = twister2*

[options.entry_points]
pytest11 =
    twister2 = twister2.plugin
console_scripts =
    twister_tools = twister2.scripts.main:main

[flake8]
max-line-length = 120
ignore =
    # line break before binary operator
    W503,
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

per-file-ignores =
    # imported but unused
    __init__.py: F401

[mypy]
ignore_missing_imports = True
