[metadata]
name = pytest-twister
version = attr: twister2.__version__
description = Plugin for pytest to run Zephyr tests
long_description = file: README.rst
url = https://github.com/zephyrproject-rtos/twister
python_requires = ~=3.8
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Quality Assurance
    Operating System :: Posix :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir =
    =src
install_requires =
    filelock
    GitPython
    marshmallow
    ply
    psutil
    pytest>=7.0.0
    pytest-subtests>=0.7.0
    PyYAML>=5.1
    pyserial
    tabulate

[options.packages.find]
where = src

[options.entry_points]
pytest11 =
    twister = twister2.plugin
console_scripts =
    twister_tools = twister2.scripts.__main__:main

[flake8]
max-line-length = 120
ignore =
    # line break before binary operator
    W503,
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

per-file-ignores =
    # imported but unused
    __init__.py: F401
exclude =
	parsetab.py
	# TODO: remove after file is refactored
	expr_parser.py

[isort]
profile = black
src_paths = src,tests
filter_files = True
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[mypy]
ignore_missing_imports = True
exclude = parsetab.py
